# SPU_CSC3220_W24

ButtonClicked/: CMakeLists.txt  Main.qml
DBDemo/: Database.js  Header.qml  Main.qml  MyDelegate.qml
Facade/: CMakeLists.txt
Factory/: CMakeLists.txt  main.cpp
Observer/: CMakeLists.txt
Player/: AudioInfoBox.qml  CMakeLists.txt  Main.qml  TextButton.qml
QuickDemo/: CMakeLists.txt  Counter.qml  Main.qml
